fix : Swaager 설정 완료.(세부 값 수정 완료)   -> martin 피드백 요청 중
